--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -30,7 +31,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/ngrok": "^4.1.3"
+    "@babel/preset-env": "^7.29.0",
+    "@babel/preset-react": "^7.28.5",
+    "@expo/ngrok": "^4.1.3",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
+    "react-test-renderer": "^19.2.4"
   },
   "private": true
 }
