--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "^11.5.2",
     "expo": "^54.0.32",
+    "expo-background-fetch": "^14.0.9",
     "expo-file-system": "~19.0.21",
     "expo-linear-gradient": "^15.0.8",
     "expo-location": "~19.0.8",
